# python-demo-hexagonal-architecture

./: .gitignore  README.md  pyproject.toml
deployment/: Dockerfile  docker-compose.local.yaml
deployment/entrypoints/: entrypoint_api.sh  entrypoint_db_migrations.sh
src/shop/adapters/: cli.py
src/shop/adapters/api/: app.py  composites.py  exception_handlers.py
src/shop/adapters/api/v1/: routers.py
src/shop/adapters/api/v1/controllers/: products.py
src/shop/adapters/database/: __init__.py  engine.py  mapping.py  meta.py  settings.py
src/shop/adapters/database/alembic/: env.py
src/shop/adapters/database/migrations/: 2024_03_28_03_47_29_create_table_products.py
src/shop/adapters/database/repositories/: __init__.py  base.py  products_repo.py
src/shop/adapters/database/tables/: products.py
src/shop/adapters/log/: config.py  settings.py
src/shop/application/base/: errors.py
src/shop/application/shop/: errors.py
src/shop/application/shop/entities/: products.py
src/shop/application/shop/interfaces/: repositories.py
src/shop/application/shop/services/: __init__.py  products.py
src/shop/run/: alembic_runner.py  cli.py  shop_api.py
